Esta página mola #Hacktoberfest

--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
   </head>
   <body><h1>Título que aparecerá en la página</h1>
     <p>Texto de la página</p>
+    <h2>Esta página es muy guay 🤘</h2>
   </body>
 </html>
